<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSelect"
        android:textSize="@dimen/textSizeLarge"/>
    <CheckBox
        android:id="@+id/checkStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkStart"
        android:textSize="@dimen/textSizeMedium"/>
    <LinearLayout
        android:id="@+id/linerSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/Dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioDog"/>
    <RadioButton
        android:id="@+id/Cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioCat"/>
    <RadioButton
        android:id="@+id/Bird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioBird"/>
    </RadioGroup>
    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDone"/>
        <ImageView
            android:id="@+id/imgV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>

    </LinearLayout>
</LinearLayout>